Fixed link from index.html and misalignment

--- a/user-profile.css
+++ b/user-profile.css
@@ -92,6 +92,8 @@
     height: 35%;
     padding: 15px;
 
+    margin-left: 20px;
+
     display: flex;
 	flex-direction: row;
 	justify-content: space-between;
